--- a/group-buy-market-infrastructure/pom.xml
+++ b/group-buy-market-infrastructure/pom.xml
@@ -46,6 +46,12 @@
             <groupId>cn.bugstack</groupId>
             <artifactId>group-buy-market-domain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.25.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
