--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,18 @@
             <dependency>
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-boot-starter</artifactId>
-                <version>3.26.0</version>
+                <version>3.20.0</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.redisson</groupId>
+                        <artifactId>redisson-spring-data</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-data-27</artifactId>
+                <version>3.20.0</version>
             </dependency>
 
             <!-- http 接口框架 https://bugstack.cn/md/road-map/http.html -->
