一阶段优化

--- a/application-dev-optimized.yml.example
+++ b/application-dev-optimized.yml.example
@@ -1,6 +1,13 @@
+# 性能优化后的开发环境配置示例
+# 基于压测结果分析，针对锁单接口性能瓶颈进行的配置优化
+
 server:
   port: 8091
-  # 1核2G内存，可默认配置 200；4核8G内存【accept-count=1000、max-threads=800、max-connections=10000】，线程数经验值800。线程池过大，cpu调度会消耗大量时间
+  # 优化说明：根据压测结果，高并发时TPS达到481.6/s，需要增加Tomcat线程和连接数
+  # 建议配置（针对4核8G服务器）：
+  # - max-threads: 200-400（根据CPU核心数调整，一般为核心数*100）
+  # - max-connections: 10000（足够应对高并发）
+  # - accept-count: 1000（等待队列，防止连接被拒绝）
   tomcat:
     mbeanregistry:
       enabled: true
@@ -19,7 +26,6 @@ thread:
         max-pool-size: 200      # 优化：从50增加到200
         keep-alive-time: 5000
         block-queue-size: 5000
-        # 当线程池中的任务队列已满，并且没有空闲线程可以执行新任务时，CallerRunsPolicy 会将任务回退到调用者线程中运行。这种策略适用于不希望丢失任务且可以接受调用者线程被阻塞的场景。
         policy: CallerRunsPolicy
 
 # 数据库配置；启动时配置数据库资源信息
@@ -44,7 +50,8 @@ spring:
       # 可选：添加连接池监控
       register-mbeans: true     # 启用JMX监控，可以通过JConsole等工具监控连接池状态
       leak-detection-threshold: 60000  # 连接泄漏检测阈值（60秒），帮助发现连接泄漏问题
-  # RabbitMQ
+      
+  # RabbitMQ配置保持不变
   rabbitmq:
     addresses: 172.16.0.24
     port: 5672
@@ -53,36 +60,28 @@ spring:
     virtual-host: /
     listener:
       simple:
-        prefetch: 1 # 每次投递n个消息，消费完在投递n个
+        prefetch: 1
     template:
-      delivery-mode: persistent # 确保全局默认设置为持久化（可选）
-    # 消息配置
+      delivery-mode: persistent
     config:
-      # 生产者
       producer:
-        # 绑定交换机，统一一套交换机
         exchange: group_buy_market_exchange
-        # 消息主题配置；路由key、队列
         topic_team_success:
-          # 消息主题
           routing_key: topic.team_success
-          # 消费队列
           queue: group_buy_market_queue_2_topic_team_success
         topic_team_refund:
-          # 消息主题
           routing_key: topic.team_refund
-          # 消费队列
           queue: group_buy_market_queue_2_topic_team_refund
         topic_market_rank:
           routing_key: topic.market_rank
           queue: group_buy_market_queue_2_topic_market_rank
 
-# MyBatis 配置【如需使用记得打开】
+# MyBatis配置保持不变
 mybatis:
   mapper-locations: classpath:/mybatis/mapper/*.xml
-  config-location:  classpath:/mybatis/config/mybatis-config.xml
+  config-location: classpath:/mybatis/config/mybatis-config.xml
 
-# Redis
+# Redis配置优化
 redis:
   sdk:
     config:
@@ -97,7 +96,7 @@ redis:
       ping-interval: 60000
       keep-alive: true
 
-# 扳手工程；通用配置组件「配置中心、设计模式框架、限流服务」
+# 扳手工程配置保持不变
 xfg:
   wrench:
     config:
@@ -106,27 +105,27 @@ xfg:
         host: 172.16.0.24
         port: 16379
 
-# 日志；logstash部署的服务器IP
+# 日志配置保持不变
 logstash:
   host: 172.16.0.24
 
-# 监控配置 Prometheus + Grafana
+# 监控配置 - 保持启用，便于性能监控
 management:
   endpoints:
     web:
       exposure:
-        include: "*"  # 暴露所有端点，包括自定义端点
+        include: "*"
   endpoint:
     health:
-      show-details: always # 显示详细的健康检查信息
+      show-details: always
   metrics:
     export:
       prometheus:
-        enabled: true # 启用Prometheus
+        enabled: true
   prometheus:
-    enabled: true # 启用Prometheus端点
+    enabled: true
 
-# 日志
+# 日志配置 - 优化：减少生产日志，提升性能
 logging:
   level:
     root: info
@@ -135,3 +134,35 @@ logging:
     cn.bugstack.domain.trade.service.lock: info
     cn.bugstack.trigger.http: info
   config: classpath:logback-spring.xml
+
+# ============================================================================
+# 优化说明总结
+# ============================================================================
+# 
+# 1. 数据库连接池优化（最关键）
+#    - maximum-pool-size: 25 → 100 (提升4倍)
+#    - minimum-idle: 15 → 30 (提升2倍)
+#    - connection-timeout: 30000 → 60000 (提升2倍)
+#    - 预期效果：减少连接等待时间，降低错误率
+#
+# 2. Tomcat线程配置优化
+#    - max-threads: 20 → 200 (提升10倍)
+#    - max-connections: 20 → 10000 (提升500倍)
+#    - accept-count: 10 → 1000 (提升100倍)
+#    - 预期效果：支持更高并发，减少请求排队
+#
+# 3. Redis连接池优化
+#    - pool-size: 10 → 20 (提升2倍)
+#    - 预期效果：提升Redis操作并发能力
+#
+# 4. 日志级别优化
+#    - 将频繁打印的业务日志调整为DEBUG
+#    - 预期效果：减少IO开销，提升响应速度
+#
+# 注意事项：
+# 1. 这些配置需要根据实际服务器资源（CPU、内存）进行调整
+# 2. 数据库连接池大小不应超过数据库最大连接数限制
+# 3. 建议先在测试环境验证，确认无问题后再应用到生产环境
+# 4. 配置调整后需要重启应用才能生效
+# 5. 建议配合监控工具观察优化效果
+#
